--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,183 @@
+@import url('https://fonts.googleapis.com/css2?family=Bungee&family=Bungee+Inline&display=swap');
+
+/* 全体 */
 .App {
+  font-family: "Bungee";
+  font-weight: 400;
+  font-style: normal;
+  display: flex;
+  justify-content: center;
+}
+
+.wrap {
+  margin-top: 60px;
+  width: 476px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+}
+
+/* ドット猫 */
+.wrap-img {
+  width: 100px;
+  height: 217px;
+}
+
+/* ゲーム */
+.container {
+  width: 376px;
+  height: 586px;
+  border: 5px solid #000;
+  background-color: #888787;
+  box-shadow: inset 7px 7px 0px 0px rgba(224, 224, 224, 0.5),
+    inset -7px -7px 0px 0px rgba(44, 44, 44, 0.3);
+}
+
+.game_container {
+  width: 320px;
+  margin: 0 auto;
+}
+
+/* 設定ボタン */
+.setting_btn {
+  margin-top: 15px;
+  margin-left: 325px;
+  display: block;
+  width: 30px;
+  height: 30px;
+  padding: 3px 3px;
+  background-color: #d9d9d9;
+  text-align: center;
+  font-size: 20px;
+  color: #565656;
+  line-height: 20px;
+  box-shadow: inset 2px 2px 0px 0px rgba(255, 255, 255, 1),
+    inset -2px -2px 0px 0px rgba(44, 44, 44, 0.3);
+}
+
+/* ゲームエリア */
+.game_wrap {
+  margin: 0 auto;
+  width: 256px;
+}
+
+/* カウンターエリア */
+.counter-wrap {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+
+.counter {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.counter_ttl {
+  height: 20px;
+  color: #333;
+  font-size: 16px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.counter_box {
+  background-color: #333;
+  width: 60px;
+  height: 30px;
   display: flex;
-  flex-direction: column;
+  justify-content: end;
   align-items: center;
+  line-height: 20px;
+}
+
+.counter_box-num {
+  color: #e8ff58;
+  font-size: 20px;
+  font-family: "Bungee Inline";
+}
+
+/* リセットボタン */
+.reset_btn {
+  display: block;
+  width: 38px;
+  height: 36px;
+  padding: 3px 4px;
+  text-align: center;
+  background-color: #d9d9d9;
+  box-shadow: inset 3px 3px 0px 0px rgba(255, 255, 255, 1),
+    inset -3px -3px 0px 0px rgba(44, 44, 44, 0.3);
+  position: relative;
+}
+
+.reset_btn-img {
+  display: block;
+  width: 30px;
+  height: 24px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+/* マス */
+.board {
+  margin-top: 14px;
+  display: grid;
+  grid-template-columns: repeat(16, 20px);
+  border: 1px solid #333;
+  width: 320px; /* ボード全体の幅をセルの幅 × 列数 + グリッドの隙間に合わせて調整 */
+}
+
+.cell {
+  display: block;
+  width: 20px;
+  height: 20px;
+  background-color: #d9d9d9;
+  border: 1px solid #888787;
+  box-shadow: inset 2px 2px 0px 0px rgba(255, 255, 255, 1),
+    inset -2px -2px 0px 0px rgba(44, 44, 44, 0.3);
+}
+
+.revealed {
+  display: block;
+  width: 20px;
+  height: 20px;
+  background-color: #131313;
+  border: 1px solid #888787;
+  box-shadow: none;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.num-1 {
+  color: #8094BE;
+  font-family: "Bungee Inline";
+  font-size: 16px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.num-2 {
+  color: #9AA753;
+  font-family: "Bungee Inline";
+  font-size: 16px;
+}
+
+.num-3 {
+  color: #CF8F8F;
+  font-family: "Bungee Inline";
+  font-size: 16px;
+}
+
+.num-4 {
+  color: #B392BC;
+  font-family: "Bungee Inline";
+  font-size: 16px;
+}
+
+/* ゲームタイトル */
+.game_ttl-txt {
+  line-height: 38px;
+  text-align: center;
+  font-family: "Bungee Inline";
+  font-size: 38px;
+  color: #fff;
+  text-shadow: 0px 0px 15px #e8ff58;
 }
