--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@
 /* ゲーム */
 .container {
   width: 376px;
-  height: 586px;
+  height: 568px;
   border: 5px solid #000;
   background-color: #888787;
   box-shadow: inset 7px 7px 0px 0px rgba(224, 224, 224, 0.5),
@@ -73,9 +73,10 @@
 }
 
 .counter_ttl {
-  height: 20px;
+  height: 32px;
   color: #333;
   font-size: 16px;
+  margin: 0;
 }
 
 .counter_box {
@@ -92,6 +93,7 @@
   color: #e8ff58;
   font-size: 20px;
   font-family: "Bungee Inline";
+  margin: 0 6px;
 }
 
 /* リセットボタン */
@@ -174,10 +176,11 @@
 
 /* ゲームタイトル */
 .game_ttl-txt {
-  line-height: 38px;
+  line-height: 76px;
   text-align: center;
   font-family: "Bungee Inline";
   font-size: 38px;
   color: #fff;
   text-shadow: 0px 0px 15px #e8ff58;
+  margin: 0;
 }
