--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
 
 .wrap {
   margin-top: 60px;
-  width: 476px;
+  width: 524px;
   display: flex;
   justify-content: center;
   align-items: flex-end;
@@ -25,7 +25,7 @@
 
 /* ゲーム */
 .container {
-  width: 376px;
+  width: 424px;
   height: 568px;
   border: 5px solid #000;
   background-color: #888787;
@@ -41,7 +41,7 @@
 /* 設定ボタン */
 .setting_btn {
   margin-top: 15px;
-  margin-left: 325px;
+  margin-left: 360px;
   display: block;
   width: 30px;
   height: 30px;
@@ -128,6 +128,30 @@
   width: 320px; /* ボード全体の幅をセルの幅 × 列数 + グリッドの隙間に合わせて調整 */
 }
 
+.board_gameover {
+  margin-top: 14px;
+  display: grid;
+  grid-template-columns: repeat(16, 20px);
+  border: 1px solid #333;
+  width: 320px; /* ボード全体の幅をセルの幅 × 列数 + グリッドの隙間に合わせて調整 */
+  position: relative;
+}
+
+.board_gameover-txt {
+  display: block;
+  width: 320px;
+  height: 320px;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #ff0000;
+  background-color: #000;
+  opacity: .3;
+}
+
 .cell {
   display: block;
   width: 20px;
@@ -187,8 +211,21 @@
   line-height: 76px;
   text-align: center;
   font-family: "Bungee Inline";
-  font-size: 38px;
+  font-size: 46px;
   color: #fff;
   text-shadow: 0px 0px 15px #e8ff58;
   margin: 0;
+}
+
+.game_ttl-gameovertxt {
+  text-shadow: 0px 0px 15px #ff0000;
+}
+
+.game_ttl-gamewintxt {
+  margin-top: 8px;
+  display: block;
+  text-align: center;
+  text-shadow: 0px 0px 15px #00ff37;
+  font-size: 30px;
+  line-height: 32px;
 }
